--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "スポーツ吹矢タイマー MENU",
-  "short_name": "吹矢MENU",
+  "short_name": "吹矢Timer",
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
