--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "スポーツ吹矢タイマー MENU",
   "short_name": "吹矢Timer PWA",
-  "start_url": "./"
+  "start_url": "./",
   "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
