--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
-      "sizes": "192x192",
+      "src": "icon-512",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "icon-512-splash.png",
-      "sizes": "512x512",
+      "src": "icon-192.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ]
