--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "吹矢タイマー MENU",
-  "short_name": "吹矢Timer_PWA",
+  "short_name": "吹矢Timer PWA",
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
